# teleprocessinggh

./: .dockerignore  Dockerfile  README.md  RunAPI.md  Task.txt  Task3.txt  error.txt  main.py  pyproject.toml  requirements.txt  setup.py
config/: settings.py
config/telecom_anomaly/core/: models.py
telecom_anomaly/: __init__.py  api.py  main.py
telecom_anomaly/core/: detector.py  models.py
telecom_anomaly/detection/: base.py  duration.py  frequency.py  location.py  sms.py  time_patterns.py
telecom_anomaly/io/: exporter.py  pdf_exporter.py  reader.py
telecom_anomaly/utils/: geo.py  helpers.py  pdf_processor.py
telecom_anomaly/validation/: validator.py
tests/: test_validator.py
